# voting-tests

./: .gitignore  README.md  pyproject.toml
src/tevmtest/: __init__.py  utils.py
tests/: bp_voting.py  conftest.py  decay.py  example.py  self_stake_boost.py  setup.py  test_evm_voting.py  test_generate_data.py  voting_utils.py
tests/contracts/eosio.evm/regular/: regular.abi
